# bulk-deconvolution

./: README.md  environment.yml  pyproject.toml  requirements.txt
data/: GSE107572_expr.csv  atap.scg_proportions.csv  cellanneal_GSE107572.csv  cellanneal_GSE1479433.csv  cleveland.scg_proportions.csv  ibd_signature.csv  ibd_signature_match.csv  ibd_signature_whole.csv  kassandra_all_GSE107572.csv  kassandra_all_GSE1479433.csv  kassandra_child_GSE107572.csv  kassandra_child_GSE1479433.csv  lmu.scg_proportions.csv  neu-mnp.xlsx  sig_length.csv  svr_GSE107572.csv  svr_GSE1479433.csv
data/GEO/: neutrophil-mnp copy.xlsx  neutrophil-mnp.xlsx
data/genesize/: cellanneal_atap_compartment20.csv  cellanneal_atap_compartment40.csv  cellanneal_atap_compartment60.csv  cellanneal_atap_compartment80.csv  cellanneal_cleveland_compartment20.csv  cellanneal_cleveland_compartment40.csv  cellanneal_cleveland_compartment60.csv  cellanneal_cleveland_compartment80.csv  cellanneal_lmu_compartment20.csv  cellanneal_lmu_compartment40.csv  cellanneal_lmu_compartment60.csv  cellanneal_lmu_compartment80.csv  compsig_20.csv  compsig_40.csv  compsig_60.csv  compsig_80.csv  svr_atap_compartment20.csv  svr_atap_compartment40.csv  svr_atap_compartment60.csv  svr_atap_compartment80.csv  svr_cleveland_compartment20.csv  (+7 more)
src/: Neutrophil-analysis.ipynb  deconv.py  gene_signature.ipynb  gene_signature_constructor.ipynb  helper.py  master_deconvolution.ipynb  normal_log.ipynb  plot.py  pred.csv  pred2.csv  pred3.csv  project_configs.py  scratch.py  stats.py  tutorial-notebook.ipynb
test/: test.py
(+157 files in other folders)
